fatal error: Possible safepoint reached by thread that does not allow it

XMLWordPrintable

    • jfr
    • b07

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/mesos/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S64/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/589fc727-34c6-410d-a3d3-6561940a2473/runs/49875ea5-557b-4454-8c7a-8500648c1618/workspace/open/src/hotspot/share/runtime/thread.cpp:996), pid=79006, tid=37635
        # fatal error: Possible safepoint reached by thread that does not allow it

        --------------- T H R E A D ---------------

        Current thread (0x00007fc479a92800): JavaThread "com.oracle.jfr.jmh.simple.Basic.mtDynamic-jmh-worker-3" daemon [_thread_in_vm, id=37635, stack(0x000070001044a000,0x000070001054a000)]

        Stack: [0x000070001044a000,0x000070001054a000], sp=0x00007000105488d0, free space=1018k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0xb3a0af] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
        V [libjvm.dylib+0xb3a7cb] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
        V [libjvm.dylib+0x3345dc] report_fatal(char const*, int, char const*, ...)+0xd2
        V [libjvm.dylib+0xaae5d6] Thread::check_possible_safepoint()+0x48
        V [libjvm.dylib+0xaddcc7] ThreadStateTransition::transition(JavaThread*, JavaThreadState, JavaThreadState)+0xc7
        V [libjvm.dylib+0x56b7a9] jfr_event_writer_flush+0x1d8
        J 1385 jdk.jfr.internal.JVM.flush(Ljdk/jfr/internal/EventWriter;II)Z jdk.jfr@15-ea (0 bytes) @ 0x00000001160814e2 [0x00000001160813e0+0x0000000000000102]
        J 1376 c2 jdk.jfr.DynamicEvent1.commit()V jdk.jfr@15-ea (77 bytes) @ 0x0000000116083c70 [0x0000000116082fa0+0x0000000000000cd0]

              Assignee:
              Markus Grönlund
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              16 Start watching this issue

                Created:
                Updated:
                Resolved: