8244289: fatal error: Possible safepoint reached by thread that does not allow it

Backport-of: 61932f49a58b73530e89e511874fbe2fbc343e99